added patch route for albums
